用Apache替换掉Sun的Base64代码